--- a/app/src/main/res/layout/add_item_activity.xml
+++ b/app/src/main/res/layout/add_item_activity.xml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-   >
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-
+    android:weightSum="1">
 
 
     <EditText
@@ -32,15 +27,14 @@
         android:id="@+id/notification_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-</LinearLayout>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="66dp"
         android:text="Stwórz"
         android:id="@+id/button2"
-        android:layout_alignParentBottom="true"
-        android:background="#ffffff"/>
+        android:background="#ffffff"
+        android:layout_gravity="center_horizontal|bottom" />
 
 
-</RelativeLayout>
+</LinearLayout>
