--- a/app/src/main/res/layout/details_activity.xml
+++ b/app/src/main/res/layout/details_activity.xml
@@ -1,39 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1">
 
 
-    <EditText
-        android:id="@+id/name_edit_text"
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nazwa"
+        android:textColor="#63B8FF"
+        android:textSize="40dp"
+        android:id="@+id/textView3"
+        android:gravity="center_horizontal"
+        android:layout_gravity="center_horizontal" />
+
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="nazwa"
-        />
+        android:text="Opis"
+        android:textColor="#000000"
+        android:textSize="15dp"
+        android:gravity="center"
+        android:id="@+id/textView4"
+        android:layout_weight="0.22" />
 
-    <EditText
-        android:id="@+id/description_edit_text"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="opis"/>
+        android:text="Priorytet"
+        android:textColor="#DC143C"
+        android:textSize="20dp"
+        android:gravity="center"
+        android:id="@+id/textView5"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.17" />
 
-    <RatingBar
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/ratingBar"/>
-
-    <Spinner
-        android:id="@+id/notification_spinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:text="Data"
+        android:textColor="#000000"
+        android:textSize="15dp"
+        android:gravity="center"
+        android:id="@+id/textView6"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.17" />
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="66dp"
-        android:text="Stwórz"
-        android:id="@+id/button2"
-        android:layout_gravity="center_horizontal|bottom" />
+        android:layout_height="wrap_content"
+        android:text="Edytuj"
+        android:background="#ffffff"
+        android:layout_gravity="bottom"
+        android:id="@+id/button3"
+
+
+        />
 
 
 </LinearLayout>
