--- a/app/src/main/res/layout/item_list_todo.xml
+++ b/app/src/main/res/layout/item_list_todo.xml
@@ -1,27 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+
+<LinearLayout
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:weightSum="1">
 
     <TextView
-        android:layout_width="240dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="36dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Nazwa"
-        android:id="@+id/textView" />
+        android:layout_marginRight="30dp"
+        android:gravity="center_vertical"
+        android:id="@+id/textView"
+        android:layout_weight="0.44" />
 
     <TextView
-        android:layout_width="80dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Priorytet"
         android:id="@+id/textView2"
-        android:layout_gravity="right" />
+        android:gravity="center_vertical"
+
+
+        android:layout_weight="0.20" />
 
     <CheckBox
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:text="New CheckBox"
-        android:id="@+id/checkBox" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="1dp"
+        android:gravity="center_vertical"
+        android:layout_height="wrap_content"
+        android:id="@+id/checkBox"
+        android:layout_alignParentEnd="true"
+       />
+
 
 </LinearLayout>
+
+</RelativeLayout>
