--- a/app/src/main/res/layout/item_list_todo.xml
+++ b/app/src/main/res/layout/item_list_todo.xml
@@ -1,27 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="horizontal">
 
     <TextView
+        android:id="@+id/item_name"
         android:layout_width="240dp"
         android:layout_height="50dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Nazwa"
-        android:id="@+id/textView" />
+        android:textAppearance="?android:attr/textAppearanceMedium"/>
 
     <TextView
+        android:id="@+id/item_priority"
         android:layout_width="80dp"
         android:layout_height="50dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_gravity="right"
         android:text="Priorytet"
-        android:id="@+id/textView2"
-        android:layout_gravity="right" />
+        android:textAppearance="?android:attr/textAppearanceMedium"/>
 
     <CheckBox
+        android:id="@+id/item_delete"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:text="New CheckBox"
-        android:id="@+id/checkBox" />
+        android:text="New CheckBox"/>
 
 </LinearLayout>
