--- a/app/src/main/res/layout/details_activity.xml
+++ b/app/src/main/res/layout/details_activity.xml
@@ -3,14 +3,15 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="@mipmap/background">
 
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nazwa"
-        android:textColor="#63B8FF"
+        android:textColor="#6495ED"
         android:textSize="40dp"
         android:id="@+id/textView3"
         android:gravity="center_horizontal"
