--- a/app/src/main/res/layout/item_list_todo.xml
+++ b/app/src/main/res/layout/item_list_todo.xml
@@ -6,44 +6,44 @@
     android:layout_height="wrap_content">
 
 
-<LinearLayout
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="1">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:weightSum="1">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="36dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Nazwa"
-        android:layout_marginRight="30dp"
-        android:gravity="center_vertical"
-        android:id="@+id/textView"
-        android:layout_weight="0.44" />
+        <TextView
+            android:id="@+id/item_name"
+            android:layout_width="wrap_content"
+            android:layout_height="36dp"
+            android:layout_marginRight="30dp"
+            android:layout_weight="0.44"
+            android:gravity="center_vertical"
+            android:text="Nazwa"
+            android:textAppearance="?android:attr/textAppearanceMedium"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Priorytet"
-        android:id="@+id/textView2"
-        android:gravity="center_vertical"
-
-
-        android:layout_weight="0.20" />
-
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="1dp"
-        android:gravity="center_vertical"
-        android:layout_height="wrap_content"
-        android:id="@+id/checkBox"
-        android:layout_alignParentEnd="true"
-       />
+        <TextView
+            android:id="@+id/item_priority"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_weight="0.20"
+            android:gravity="center_vertical"
+            android:text="Priorytet"
 
 
-</LinearLayout>
+            android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+        <CheckBox
+            android:id="@+id/item_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="1dp"
+            android:gravity="center_vertical"
+            />
+
+
+    </LinearLayout>
 
 </RelativeLayout>
