--- a/app/src/main/res/layout/add_item_activity.xml
+++ b/app/src/main/res/layout/add_item_activity.xml
@@ -2,7 +2,8 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@mipmap/background">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,8 +30,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-        <Spinner
-            android:id="@+id/notification_spinner"
+        <DatePicker
+            android:id="@+id/date_picker"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
@@ -38,7 +39,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/add_note_button"
         android:layout_width="match_parent"
         android:layout_height="66dp"
         android:layout_gravity="center_horizontal|bottom"
