--- a/app/src/main/res/layout/details_activity.xml
+++ b/app/src/main/res/layout/details_activity.xml
@@ -1,64 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="1"
-    android:background="@mipmap/background">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@mipmap/background"
+              android:orientation="vertical"
+              android:weightSum="1">
 
 
     <TextView
+        android:id="@+id/details_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
         android:text="Nazwa"
         android:textColor="#6495ED"
-        android:textSize="40dp"
-        android:id="@+id/textView3"
-        android:gravity="center_horizontal"
-        android:layout_gravity="center_horizontal" />
+        android:textSize="40dp"/>
 
     <TextView
+        android:id="@+id/details_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="0.22"
+        android:gravity="center"
         android:text="Opis"
         android:textColor="#000000"
-        android:textSize="15dp"
-        android:gravity="center"
-        android:id="@+id/textView4"
-        android:layout_weight="0.22" />
+        android:textSize="15dp"/>
 
     <TextView
+        android:id="@+id/details_priority"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.17"
+        android:gravity="center"
         android:text="Priorytet"
         android:textColor="#DC143C"
-        android:textSize="20dp"
-        android:gravity="center"
-        android:id="@+id/textView5"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0.17" />
+        android:textSize="20dp"/>
 
     <TextView
+        android:id="@+id/details_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.17"
+        android:gravity="center"
         android:text="Data"
         android:textColor="#000000"
-        android:textSize="15dp"
-        android:gravity="center"
-        android:id="@+id/textView6"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0.17" />
+        android:textSize="15dp"/>
 
     <Button
+        android:id="@+id/details_ok"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Edytuj"
-        android:background="#ffffff"
         android:layout_gravity="bottom"
-        android:id="@+id/button3"
-
-
-        />
+        android:background="#ffffff"
+        android:text="Ok"/>
 
 
 </LinearLayout>
