--- a/app/src/main/res/layout/item_list_todo.xml
+++ b/app/src/main/res/layout/item_list_todo.xml
@@ -1,50 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="8dp"
     >
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:weightSum="1">
+    <TextView
+        android:id="@+id/item_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:gravity="center"
+        android:text="Nazwa"
+        android:layout_marginLeft="8dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"/>
 
-        <TextView
-            android:id="@+id/item_name"
-            android:layout_width="wrap_content"
-            android:layout_height="36dp"
-            android:layout_marginRight="30dp"
-            android:layout_weight="0.44"
-            android:gravity="center_vertical"
-            android:text="Nazwa"
-            android:textAppearance="?android:attr/textAppearanceMedium"/>
-
-        <TextView
-            android:id="@+id/item_priority"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_weight="0.20"
-            android:gravity="center_vertical"
-            android:text="Priorytet"
+    <TextView
+        android:id="@+id/item_priority"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="32dp"
+        android:layout_toRightOf="@+id/item_name"
+        android:gravity="center"
+        android:text="Priorytet"
+        android:textAppearance="?android:attr/textAppearanceMedium"/>
 
 
-            android:textAppearance="?android:attr/textAppearanceMedium"/>
-
-        <CheckBox
-            android:id="@+id/item_delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="1dp"
-            android:gravity="center_vertical"
-            />
-
-
-    </LinearLayout>
-
+    <CheckBox
+        android:id="@+id/item_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="8dp"
+        />
 </RelativeLayout>
